[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelloader"
version = "1.1.1"
authors = [
  { name="Flavio Stutz", email="flaviostutz@gmail.com" },
]
description = "Sentinel-2 satellite tiles images downloader from Copernicus"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/flaviostutz/sentinelloader"
"Bug Tracker" = "https://github.com/flaviostutz/sentinelloader/issues"